@@ -21,7 +21,8 @@ Emacs で断片的なメモをどんどんとるための環境です.
 </p>
 
 <ul>
- <li> <a href="https://github.com/kaorahi/howm/releases">ダウンロード</a>
+ <li> <a href="https://github.com/kaorahi/howm?tab=readme-ov-file#quick-start">クイックスタート</a>,
+      <a href="https://github.com/kaorahi/howm/releases">ダウンロード</a>
       (スナップショット版
       <a href="https://melpa.org/#/howm"><img alt="MELPA" src="https://melpa.org/packages/howm-badge.svg"/></a>
       /
@@ -40,6 +41,8 @@ Emacs で断片的なメモをどんどんとるための環境です.
             <a href="https://web.archive.org/web/20160529014325/http://www.bookshelf.jp/soft/meadow_38.html#SEC563">Meadow memo での紹介</a>
        <li> →
             <a href="https://github.com/Emacs101/howm-manual">Andrei Sukhovskiiさんのチュートリアル</a>. howmに関する最も詳しいドキュメントです. (英語・ロシア語)
+       <li> →
+            <a href="https://www.emacswiki.org/emacs/HowmMode">EmacsWiki</a> (Tipsあり)
       </ul>
  <li> 質問等: <a href="https://github.com/kaorahi/howm">GitHub</a> の Issue へ
  <li class="obsolete"> (
