@@ -2,6 +2,8 @@
 
 	* index.html: update links etc. (quick start, tips)
 
+	* index-j.html: ditto.
+
 2024-09-08  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>
 
 	* index.html: comment out Emacs Elements channel as it seems unavailable
